--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -290,6 +290,7 @@ button {
     }
     &__textarea {
         height: 120px;
+        max-width: 100%;
     }
     &__btn {
         padding: 0.7rem;
