--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,9 @@ $price-color: #FF8080;
     box-sizing: border-box;
     font-family: 'Comfortaa', cursive;
 }
+body {
+    background: $primary-bg;
+}
 a {
     text-decoration: none;
 }
@@ -330,12 +333,18 @@ button {
     }
 }
 
-
-
-
-
-
-
+.overlay {
+    background: $complement;
+    width: 60px;
+    height: 60px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 99999;
+    border-radius: 50%;
+    pointer-events: none;
+}
 
 
 @keyframes rotate360 {
